#canary refactor: Добавил заищиту запросов при помощи Bearer токена
